5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4135/executions/1836_1276.log
== TEST (2019-06-29 22:07:19) 
-- CODE:
from numpy import*

mat=array(eval(input("Escreva a matriz: ")))

funcionarios=mat.shape[0]
dias=0
for i in range(funcionarios):
	dias=dias+sum(:,j)
print(dias)	


-- ERROR:
File "XXXX", line 8
    dias=dias+sum(:,j)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 22:07:40) 
-- CODE:
from numpy import*

mat=array(eval(input("Escreva a matriz: ")))

funcionarios=mat.shape[0]
dias=0
for i in range(funcionarios):
	dias=dias+sum[:,j]
print(dias)	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 22:09:17) 
-- CODE:
from numpy import*

mat=array(eval(input("Escreva a matriz: ")))

funcionarios=mat.shape[0]
dias=0
for j in range(funcionarios):
	dias=dias+sum[:,j]
print(dias)	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 22:14:35) 
-- CODE:
from numpy import*

mat=array(eval(input("Escreva a matriz: ")))

funcionarios=mat.shape[0]
dias=0
for j in range(funcionarios):
	dias=dias+sum[:,j]
print(dias)	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 22:17:00) 
-- CODE:
from numpy import*

mat=array(eval(input("Escreva a matriz: ")))

funcionarios=mat.shape[0]
dias=zeros(funcionarios,dtype=int)
for j in range(funcionarios):
	dias=dias+sum[:,j]
	
print(dias)	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 22:20:07) 
-- CODE:
from numpy import*

mat=array(eval(input("Dgite a matriz: ")))
funcionarios= mat.shape[0]

total=zeros(funcionarios,dtype=int)

for j in range(funcionarios):
	total[i]=sum(mat[:,j])

print(total)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 22:21:44) 
-- CODE:
from numpy import*

mat=array(eval(input("Dgite a matriz: ")))
funcionarios= mat.shape[0]

total=zeros(funcionarios,dtype=int)

for j in range(funcionarios):
	total[i]=sum(mat[:,j])

print(total)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 22:22:44) 
-- CODE:
from numpy import*

mat=array(eval(input("Dgite a matriz: ")))
funcionarios= mat.shape[0]

total=zeros(funcionarios,dtype=int)

for j in range(funcionarios):
	total[j]=sum(mat[:,j])

print(total)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 22:35:32) 
-- CODE:
from numpy import*

mat=array(eval(input("Dgite a matriz: ")))
funcionarios= mat.shape[0]

total=zeros(funcionarios,dtype=int)

for j in range(funcionarios):
	total[j]=sum(mat[:,j])
	if(max(total)==total[0]):
		print(1)
	elif(max(total)==total[1]):
		print(2)
	elif(max(total)==total[2]):
		print(3)
	elif(max(total)==total[3]):
		print(4)
	elif(max(total)==total[4]):
		print(5)
	elif(max(total)==total[5]):
		print(6)
	elif(max(total)==total[1]):
		print(7)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 22:37:34) 
-- CODE:
from numpy import*

mat=array(eval(input("Dgite a matriz: ")))
funcionarios= mat.shape[0]

total=zeros(funcionarios,dtype=int)

for j in range(funcionarios):
	total[j]=sum(mat[:,j])
if(max(total)==total[0]):
	print(1)
elif(max(total)==total[1]):
	print(2)
elif(max(total)==total[2]):
	print(3)
elif(max(total)==total[3]):
	print(4)
elif(max(total)==total[4]):
	print(5)
elif(max(total)==total[5]):
	print(6)
elif(max(total)==total[1]):
	print(7)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-29 22:39:34) 
-- CODE:
from numpy import*

mat=array(eval(input("Dgite a matriz: ")))
funcionarios= mat.shape[0]

total=zeros(funcionarios,dtype=int)

for j in range(funcionarios):
	total[j]=sum(mat[:,j])
if(max(total)==total[0]):
	print(1)
elif(max(total)==total[1]):
	print(2)
elif(max(total)==total[2]):
	print(3)
elif(max(total)==total[3]):
	print(4)
elif(max(total)==total[4]):
	print(5)
elif(max(total)==total[5]):
	print(6)
elif(max(total)==total[1]):
	print(7)
		


-- EXECUTION TIME:
1.09082
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:

-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:

-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 22:43:32) 
-- CODE:
from numpy import*

mat=array(eval(input("Dgite a matriz: ")))
funcionarios= mat.shape[0]

total=zeros(funcionarios,dtype=int)

for i in range(funcionarios):
	total[i]=sum(mat[i,:])
if(max(total)==total[0]):
	print(1)
elif(max(total)==total[1]):
	print(2)
elif(max(total)==total[2]):
	print(3)
elif(max(total)==total[3]):
	print(4)
elif(max(total)==total[4]):
	print(5)
elif(max(total)==total[5]):
	print(6)
elif(max(total)==total[1]):
	print(7)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 22:43:42) 
-- CODE:
from numpy import*

mat=array(eval(input("Digite a matriz: ")))
funcionarios= mat.shape[0]

total=zeros(funcionarios,dtype=int)

for i in range(funcionarios):
	total[i]=sum(mat[i,:])
if(max(total)==total[0]):
	print(1)
elif(max(total)==total[1]):
	print(2)
elif(max(total)==total[2]):
	print(3)
elif(max(total)==total[3]):
	print(4)
elif(max(total)==total[4]):
	print(5)
elif(max(total)==total[5]):
	print(6)
elif(max(total)==total[1]):
	print(7)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 22:45:37) 
-- CODE:
from numpy import*

mat=array(eval(input("Digite a matriz: ")))
funcionarios= mat.shape[1]

total=zeros(funcionarios,dtype=int)

for j in range(funcionarios):
	total[i]=sum(mat[:,j])
if(max(total)==total[0]):
	print(1)
elif(max(total)==total[1]):
	print(2)
elif(max(total)==total[2]):
	print(3)
elif(max(total)==total[3]):
	print(4)
elif(max(total)==total[4]):
	print(5)
elif(max(total)==total[5]):
	print(6)
elif(max(total)==total[1]):
	print(7)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 22:46:31) 
-- CODE:
from numpy import*

mat=array(eval(input("Digite a matriz: ")))
funcionarios= mat.shape[1]

total=zeros(funcionarios,dtype=int)

for j in range(funcionarios):
	total[j]=sum(mat[:,j])
if(max(total)==total[0]):
	print(1)
elif(max(total)==total[1]):
	print(2)
elif(max(total)==total[2]):
	print(3)
elif(max(total)==total[3]):
	print(4)
elif(max(total)==total[4]):
	print(5)
elif(max(total)==total[5]):
	print(6)
elif(max(total)==total[1]):
	print(7)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 22:49:14) 
-- CODE:
from numpy import*

mat=array(eval(input("Digite a matriz: ")))
funcionarios= mat.shape[1]
print(funcionarios)
total=zeros(funcionarios,dtype=int)

for j in range(funcionarios):
	total[j]=sum(mat[:,j])
if(max(total)==total[0]):
	print(1)
elif(max(total)==total[1]):
	print(2)
elif(max(total)==total[2]):
	print(3)
elif(max(total)==total[3]):
	print(4)
elif(max(total)==total[4]):
	print(5)
elif(max(total)==total[5]):
	print(6)
elif(max(total)==total[1]):
	print(7)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 22:54:06) 
-- CODE:
from numpy import*

mat=array(eval(input("Digite a matriz: ")))
funcionarios= mat.shape[1]
print(funcionarios)
total=zeros(funcionarios,dtype=int)

for j in range(funcionarios):
	total[j]=sum(mat[:,j])
print(total)
if(max(total)==total[0]):
	print(1)
elif(max(total)==total[1]):
	print(2)
elif(max(total)==total[2]):
	print(3)
elif(max(total)==total[3]):
	print(4)
elif(max(total)==total[4]):
	print(5)
elif(max(total)==total[5]):
	print(6)
elif(max(total)==total[1]):
	print(7)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 22:56:17) 
-- CODE:
from numpy import*

mat=array(eval(input("Digite a matriz: ")))
funcionarios= mat.shape[1]
print(funcionarios)
total=zeros(funcionarios,dtype=int)

for j in range(funcionarios):
	total[j]=sum(mat[:,j])
print(total)
   if(max(total)==total[0]):
	   print(1)
   elif(max(total)==total[1]):
   	print(2)
   elif(max(total)==total[2]):
		print(3)
   elif(max(total)==total[3]):
	   print(4)
   elif(max(total)==total[4]):
	   print(5)
   elif(max(total)==total[5]):
	   print(6)
   elif(max(total)==total[1]):
	   print(7)
		


-- ERROR:
File "XXXX", line 11
    if(max(total)==total[0]):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 22:57:34) 
-- CODE:
from numpy import*

mat=array(eval(input("Digite a matriz: ")))
funcionarios= mat.shape[1]
print(funcionarios)
total=zeros(funcionarios,dtype=int)

for j in range(funcionarios):
	total[j]=sum(mat[:,j])
print(total)
	if((total)==total[0]):
	   print(1)
   elif(max(total)==total[1]):
   	print(2)
   elif(max(total)==total[2]):
		print(3)
   elif(max(total)==total[3]):
	   print(4)
   elif(max(total)==total[4]):
	   print(5)
   elif(max(total)==total[5]):
	   print(6)
   elif(max(total)==total[1]):
	   print(7)
		


-- ERROR:
File "XXXX", line 11
    if((total)==total[0]):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 22:57:52) 
-- CODE:
from numpy import*

mat=array(eval(input("Digite a matriz: ")))
funcionarios= mat.shape[1]
print(funcionarios)
total=zeros(funcionarios,dtype=int)

for j in range(funcionarios):
	total[j]=sum(mat[:,j])
print(total)
	if(max(total)==total[0]):
	   print(1)
   elif(max(total)==total[1]):
   	print(2)
   elif(max(total)==total[2]):
		print(3)
   elif(max(total)==total[3]):
	   print(4)
   elif(max(total)==total[4]):
	   print(5)
   elif(max(total)==total[5]):
	   print(6)
   elif(max(total)==total[1]):
	   print(7)
		


-- ERROR:
File "XXXX", line 11
    if(max(total)==total[0]):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 23:12:04) 
-- CODE:
from numpy import*

mat=array(eval(input("Digite a matriz: ")))
funcionarios= mat.shape[1]
print(funcionarios)
total=zeros(funcionarios,dtype=int)

for j in range(funcionarios):
	total[j]=sum(mat[:,j])
print(total)


if(max(total)==total[0]):
	print(1)
elif(max(total)==total[1]):
	print(2)
elif(max(total)==total[2]):
   print(3)
elif(max(total)==total[3]):
	print(4)
elif(max(total)==total[4]):
   print(5)
elif(max(total)==total[5]):
   print(6)
elif(max(total)==total[6]):
   print(7)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 23:14:53) 
-- CODE:
from numpy import*

mat=array(eval(input("Digite a matriz: ")))
funcionarios= mat.shape[1]
print(funcionarios)
total=zeros(funcionarios,dtype=int)

for j in range(funcionarios):
	total[j]=sum(mat[:,j])
print(total)


#if(max(total)==total[0]):
	#print(1)
if(max(total)==total[1]):
	print(2)
elif(max(total)==total[2]):
   print(3)
elif(max(total)==total[3]):
	print(4)
elif(max(total)==total[4]):
   print(5)
elif(max(total)==total[5]):
   print(6)
elif(max(total)==total[6]):
   print(7)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 23:17:25) 
-- CODE:
from numpy import*

mat=array(eval(input("Digite a matriz: ")))
funcionarios= mat.shape[1]
print(funcionarios)
total=zeros(funcionarios,dtype=int)

for j in range(funcionarios):
	total[j]=sum(mat[:,j])
big=max(total)


if(big==total[0]):
	print(1)
if(big==total[1]):
	print(2)
elif(big==total[2]):
   print(3)
elif(big==total[3]):
	print(4)
elif(big==total[4]):
   print(5)
elif(big==total[5]):
   print(6)
elif(big==total[6]):
   print(7)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-29 23:18:39) 
-- CODE:
from numpy import*

mat=array(eval(input("Digite a matriz: ")))
funcionarios= mat.shape[1]

total=zeros(funcionarios,dtype=int)

for j in range(funcionarios):
	total[j]=sum(mat[:,j])
big=max(total)


if(big==total[0]):
	print(1)
if(big==total[1]):
	print(2)
elif(big==total[2]):
   print(3)
elif(big==total[3]):
	print(4)
elif(big==total[4]):
   print(5)
elif(big==total[5]):
   print(6)
elif(big==total[6]):
   print(7)
		


-- EXECUTION TIME:
1.1926
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-29 23:19:12) 
-- CODE:
from numpy import*

mat=array(eval(input("Digite a matriz: ")))
funcionarios= mat.shape[1]

total=zeros(funcionarios,dtype=int)

for j in range(funcionarios):
	total[j]=sum(mat[:,j])
big=max(total)


if(big==total[0]):
	print(1)
elif(big==total[1]):
	print(2)
elif(big==total[2]):
   print(3)
elif(big==total[3]):
	print(4)
elif(big==total[4]):
   print(5)
elif(big==total[5]):
   print(6)
elif(big==total[6]):
   print(7)
		


-- EXECUTION TIME:
1.06432
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
Digite a matriz: 2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
Digite a matriz: 3
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-29 23:19:45) 
-- CODE:
from numpy import*

mat=array(eval(input("Digite a matriz: ")))
funcionarios= mat.shape[1]

total=zeros(funcionarios,dtype=int)

for j in range(funcionarios):
	total[j]=sum(mat[:,j])
big=max(total)


if(big==total[0]):
	print(1)
elif(big==total[1]):
	print(2)
elif(big==total[2]):
   print(3)
elif(big==total[3]):
	print(4)
elif(big==total[4]):
   print(5)
elif(big==total[5]):
   print(6)
elif(big==total[6]):
   print(7)
		


-- EXECUTION TIME:
1.20983
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
